@@ -8,6 +8,7 @@ Issue #1722 add containername to PowerShell and Command prompts
 Issue #1706 App generation failed without info after fixing #1696
 Issue Cannot download symbols for apps with special characters
 Issue #1728 Get-BcContainerApp doesn't return the appFile
+Support that bcartifactsCacheFolder, containerHelperFolder and dvdPath can be a docker volume instead of a bind mount (for performance)
 
 2.0.5
 Issue #1668 Run-AlValidation fails if app filename has a comma (and there is only one app)
